[package]
name = "spiderbutter"
version = "0.2.1"
edition = "2018"
authors = ["Patrick Monaghan <pat@patsown.com>"]
description = "A small whitelist based fileserver"

[dependencies]
inotify = "0.8"
flate2 = "1.0.1"
libc = "*"
structopt = "0.2"
failure = "0.1.1"

async-tls = "0.7"
rustls = "0.17"

x509-parser = "0.7"

[dependencies.acme-client]
git = "https://github.com/manpat/acme-client"
# path = "../acme-client"
default-features = false

[dependencies.async-std]
version = "1.6.0"
features = ["unstable"]